<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:id="@+id/restaurantImageView"
        android:scaleType="centerCrop"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/restaurantNameTextView"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/restaurant_name"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_cuisine_type"
            android:id="@+id/categoryTextView"
            android:layout_below="@+id/restaurantNameTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textStyle="italic"
            tools:ignore="ObsoleteLayoutParam" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:id="@+id/ratingTextView"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/primary"
                tools:ignore="RtlHardcoded" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>